# local-agentic-enterprise-platform

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 20260628_0001_initial.py
backend/app/: dependencies.py  main.py
backend/app/agents/: base.py  business_agents.py
backend/app/api/: router.py
backend/app/core/: audit.py  config.py  database.py  logging.py  rate_limiter.py  security.py  telemetry.py
backend/app/models/: __init__.py  base.py  entities.py
backend/app/schemas/: agent.py  approval.py  auth.py  common.py  knowledge.py  memory.py  report.py  sql.py  workflow.py
backend/app/services/: analytics_service.py  approval_service.py  auth_service.py  calendar_service.py  email_service.py  gpu_monitor.py  knowledge_service.py  memory_service.py  model_router.py  ollama_client.py  report_service.py  scheduler_service.py  sql_safety.py  sql_service.py  supervisor.py  workflow_runtime.py
backend/tests/integration/: test_api_basic.py
backend/tests/unit/: test_analytics_service.py  test_model_router.py  (+4 more)
docs/: Zero_to_Hero_Study_Handbook.md
docs/api/: api-documentation.md
docs/architecture/: architecture.md  diagrams.md
docs/database/: database-documentation.md
docs/guides/: beginner-guide.md  dashboard-guide.md  faq.md  folder-structure.md  gpu-guide.md  installation.md  multi-agent-guide.md  ollama-guide.md  sql-guide.md  workflow-guide.md
docs/operations/: deployment-guide.md  docker-guide.md  performance-guide.md  troubleshooting.md
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppShell.tsx  AuthPanel.tsx  AuthProvider.tsx  FeaturePage.tsx  NotificationCenter.tsx
frontend/lib/: api.ts
scripts/: bootstrap.sh  checks.sh  run_api.sh  run_frontend.sh  verify_live_e2e.sh
(+35 files in other folders)
