[project]
name = "local-agentic-enterprise-platform"
version = "0.1.0"
description = "Production-grade local multi-agent business automation platform with Ollama"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.118.0",
  "uvicorn[standard]>=0.38.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.11.0",
  "sqlalchemy[asyncio]>=2.0.44",
  "asyncpg>=0.30.0",
  "aiosqlite>=0.21.0",
  "alembic>=1.17.0",
  "httpx>=0.28.1",
  "python-jose[cryptography]>=3.5.0",
  "passlib[bcrypt]>=1.7.4",
  "authlib>=1.6.5",
  "python-multipart>=0.0.20",
  "email-validator>=2.3.0",
  "loguru>=0.7.3",
  "orjson>=3.11.4",
  "redis>=6.4.0",
  "celery>=5.5.3",
  "apscheduler>=3.11.1",
  "sqlglot>=28.0.0",
  "pandas>=2.3.3",
  "polars>=1.35.2",
  "duckdb>=1.4.2",
  "plotly>=6.4.0",
  "openpyxl>=3.1.5",
  "python-pptx>=1.0.2",
  "reportlab>=4.4.4",
  "pypdf>=6.1.1",
  "python-docx>=1.2.0",
  "numpy>=2.3.4",
  "scikit-learn>=1.7.2",
  "psutil>=7.1.3",
  "prometheus-client>=0.23.1",
  "opentelemetry-api>=1.38.0",
  "opentelemetry-sdk>=1.38.0",
  "opentelemetry-exporter-otlp>=1.38.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=7.0.0",
  "mypy>=1.18.2",
  "ruff>=0.14.1",
  "types-python-dateutil>=2.9.0.20250822",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "C4", "SIM", "ARG"]
ignore = ["B008", "E501", "C420"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
asyncio_mode = "auto"

[tool.uv]
package = false

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
